# issuesdb-plugin

./: .gitignore  .mcp.json  README.md  mcp_config.json  plugin.json  pyproject.toml
.claude-plugin/: plugin.json
.claude/hooks/: session-start.sh
.github/workflows/: deploy.yml
agents/: issue-triage.md  pilot.md  security-reviewer.md
commands/: db-migrate.md  groom-issue.md  orchestrate.md  review.md  run-tests.md  triage-issue.md  work-issuesdb.md
pilot/: README.md  __init__.py  __main__.py  classify.py  cli.py  config.py  context.py  deps.py  execute.py  issuesdb.py  models.py  plan_io.py  sequence.py
scripts/: sync_skills.py  work-queue.sh
skills/db-migrate/: SKILL.md
skills/groom-issue/: SKILL.md
skills/orchestrate/: SKILL.md
skills/review/: SKILL.md
skills/run-tests/: SKILL.md
skills/triage-issue/: SKILL.md
skills/work-issuesdb/: SKILL.md
tests/: conftest.py  test_classify.py  test_cli.py  test_deps.py  test_execute.py  test_integration.py  test_plan_io.py  test_sequence.py
