[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "issuesdb-pilot"
version = "0.1.0"
description = "Delivery planner and executor for issuesdb — Python port of the pilot agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
pilot = "pilot.cli:run_console"

[tool.setuptools]
packages = ["pilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
